feat: enhance backend configuration with mail services and CORS support